May-11-2022 Afternoon Challenge FInal

--- a/index.html
+++ b/index.html
@@ -71,15 +71,19 @@
 
         <div class="row align-items-center p-3">
             <div class="col-4">
+                <div class="col-4"></div>
                 <img class="img-fluid img-height" src="Coffee Machine.jpg" alt="coffee machine pic">
+                <div class=" shadow-sm machines h2">Machines</div>
                 <b> Great Coffee Machines</b>
             </div>
             <div class="col-4">
                 <img class="img-fluid img-height text-overlay" src="small building.jpg" alt="building">
+                <div class=" shadow-sm maps h2">Maps</div>
                 <b> This is a cool building</b>
             </div>
             <div class="col-4">
                 <img class="img-fluid img-height" src="small coffee.jpg" alt="small coffee pic">
+                <div class=" shadow-sm expertise h2">Expertise</div>
                 <b> Yumm Coffee is so good</b>
             </div>
         </div>
